# ghc-parmake

./: .travis.yml  GhcParmake.hs  GhcServer.hs  LICENSE  Main.hs  README  README.md  TODO  ghc-parmake.cabal
GHC/ParMake/: BuildPlan.hs  Common.hs  Engine.hs  Parse.hs  Util.hs
src/: BuildPlan.hs  Main.hs
src/Distribution/Compat/: ReadP.hs
src/GHC/ParMake/: BuildPlan.hs  Common.hs  Engine.hs  Parse.hs  Types.hs  Util.hs
test/: A.hs
tests/: Properties.hs  Tests.hs
tests/data/executable/: A.hs  OUTPUT
tests/data/executable-lhs/: A.lhs  Main.hs
tests/data/executable-lhs-mutrec/: A.lhs  A.lhs-boot  B.hs
tests/data/executable-mutrec/: A.hs  A.hs-boot
tests/data/executable/C/: C.hs
tests/data/proj1/: B.hs
tests/data/proj1/C/: C.hs
