Name:                ghc-parmake
Version:             0.1
Synopsis:            A parallel wrapper for 'ghc --make'.
Homepage:            https://github.com/23Skidoo/ghc-parmake
License:             BSD3
License-file:        LICENSE
Author:              Mikhail Glushenkov
Maintainer:          the.dead.shall.rise@gmail.com
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2

Executable ghc-parmake
  Main-is: Main.hs
  Hs-source-dirs: src
  Build-depends: array >= 0.3 && < 0.4, base >= 4 && < 5,
                 containers >= 0.4 && < 0.5,
                 process >= 1 && < 2, temporary >= 1 && < 2,
                 filepath >= 1 && < 2
  Ghc-Options: -Wall
