Name:                   ghc-parmake
Version:                0.2.0
Synopsis:               A parallel wrapper for 'ghc --make'.

Description:            'ghc-parmake' is a parallel wrapper for 'ghc --make'
                        intended to work as its drop-in replacement. It can
                        build your Haskell program in parallel using multiple
                        cores.

                        'ghc-parmake' works by extracting a module dependency
                        graph with 'ghc -M' and then running multiple 'ghc -c'
                        processes in parallel.

                        To set the number of concurrent jobs, use the '-j'
                        option.

Homepage:               https://github.com/23Skidoo/ghc-parmake
Bug-reports:            https://github.com/23Skidoo/ghc-parmake/issues
License:                BSD3
License-file:           LICENSE
Author:                 Mikhail Glushenkov
Maintainer:             the.dead.shall.rise@gmail.com
Category:               Development
Stability:              Experimental
Build-type:             Simple
Cabal-version:          >=1.8
Extra-source-files:     README.md
                        tests/data/executable/OUTPUT
                        tests/data/executable/*.hs
                        tests/data/executable/C/*.hs
                        tests/data/executable-lhs/OUTPUT
                        tests/data/executable-lhs/*.hs
                        tests/data/executable-lhs/*.lhs
                        tests/data/executable-lhs/C/*.hs
                        tests/data/executable-mutrec/OUTPUT
                        tests/data/executable-mutrec/*.hs
                        tests/data/executable-mutrec/C/*.hs
                        tests/data/executable-lhs-mutrec/OUTPUT
                        tests/data/executable-lhs-mutrec/*.hs
                        tests/data/executable-lhs-mutrec/*.lhs
                        tests/data/executable-lhs-mutrec/C/*.hs

Library
  Exposed-modules:      GHC.ParMake.BuildPlan
                        GHC.ParMake.Common
                        GHC.ParMake.Engine
                        GHC.ParMake.Parse
                        GHC.ParMake.Types
                        GHC.ParMake.Util
  Other-modules:        Distribution.Compat.ReadP
  Hs-source-dirs:       src
  Build-depends:        base >= 4 && < 4.9,
                        array >= 0.3 && < 0.6,
                        containers >= 0.4 && < 0.6,
                        process >= 1 && < 2, temporary >= 1 && < 2,
                        filepath >= 1 && < 2, directory >= 1.1 && < 2
  GHC-options:          -Wall
  Other-extensions:     CPP, ForeignFunctionInterface, NamedFieldPuns,
                        ScopedTypeVariables, TupleSections
  if impl(ghc >= 6.8)
    GHC-options:        -fwarn-tabs

Executable ghc-parmake
  Main-is:              GhcParmake.hs
  Build-depends:        ghc-parmake == 0.2.0,
                        base >= 4 && < 4.9,
                        array >= 0.3 && < 0.6,
                        containers >= 0.4 && < 0.6,
                        process >= 1 && < 2, temporary >= 1 && < 2,
                        filepath >= 1 && < 2, directory >= 1.1 && < 2
  GHC-options:          -Wall -threaded -rtsopts
  C-sources:            cbits/getnumcores.c
  if impl(ghc >= 6.8)
    GHC-options:        -fwarn-tabs

Executable ghc-server
  Main-is:              GhcServer.hs
  Build-depends:        ghc-parmake == 0.2.*,
                        ghc == 7.*,
                        ghc-paths >= 0.1.0.9,
                        base >= 4 && < 4.9,
                        process >= 1 && < 2
  GHC-options:          -Wall -threaded -rtsopts
  Other-extensions:     CPP, ScopedTypeVariables
  if impl(ghc >= 6.8)
    GHC-options:        -fwarn-tabs

Test-suite tests
  Type:                 exitcode-stdio-1.0
  Hs-source-dirs:       tests
  Main-is:              Tests.hs
  Build-depends:        base >= 4 && < 4.9,
                        filepath >= 1 && < 2,
                        directory >= 1.1 && < 2,
                        process >= 1 && < 2,
                        ghc-parmake == 0.2.0,
                        test-framework >= 0.4.1 && < 0.9,
                        test-framework-quickcheck2 >= 0.2.10 && < 0.4,
                        test-framework-hunit >= 0.2.6 && < 0.4,
                        QuickCheck >= 2.4.1.1,
                        HUnit >= 1.2.2.0
  GHC-options:          -Wall -threaded -rtsopts

Source-repository head
  Type:                 git
  Location:             https://github.com/23Skidoo/ghc-parmake.git
